--- a/index.html
+++ b/index.html
@@ -3,14 +3,76 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PremiumWeb</title>
+    <title>Training Project</title>
     <link
-      href="https://fonts.googleapis.com/css2?family=Lato&family=Lobster&family=Open+Sans&family=Oswald&family=Raleway&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Grandstander:wght@100;300;400;500;600&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="dist/styles.css" />
   </head>
   <body>
+    <header class="container">
+      <div class="heading">
+        <h1>My training file.</h1>
+        <h1>Cheat sheet</h1>
+      </div>
+    </header>
+    <main class="container">
+      <section class="section section-yellow">
+        <a href="/flex-box.html" class="topic-link"></a>
+        <h2>Flex-box</h2>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui,
+          incidunt. Eligendi cupiditate, itaque nam perferendis quibusdam, quod
+          unde corporis commodi numquam obcaecati atque iure fuga molestiae
+          tenetur, ex sint delectus?
+        </p>
+      </section>
+      <section class="section section-pink">
+        <a href="#" class="topic-link"></a>
+        <h2>Topic</h2>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui,
+          incidunt. Eligendi cupiditate, itaque nam perferendis quibusdam, quod
+          unde corporis commodi numquam obcaecati atque iure fuga molestiae
+          tenetur, ex sint delectus?
+        </p>
+      </section>
+      <section class="section section-blue">
+        <a href="#" class="topic-link"></a>
+        <h2>Topic</h2>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui,
+          incidunt. Eligendi cupiditate, itaque nam perferendis quibusdam, quod
+          unde corporis commodi numquam obcaecati atque iure fuga molestiae
+          tenetur, ex sint delectus?
+        </p>
+      </section>
+      <section class="section section-lavander">
+        <a href="#" class="topic-link"></a>
+        <h2>Topic</h2>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui,
+          incidunt. Eligendi cupiditate, itaque nam perferendis quibusdam, quod
+          unde corporis commodi numquam obcaecati atque iure fuga molestiae
+          tenetur, ex sint delectus?
+        </p>
+      </section>
+      <section class="section section-mint">
+        <a href="#" class="topic-link"></a>
+        <h2>Topic</h2>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui,
+          incidunt. Eligendi cupiditate, itaque nam perferendis quibusdam, quod
+          unde corporis commodi numquam obcaecati atque iure fuga molestiae
+          tenetur, ex sint delectus?
+        </p>
+      </section>
+    </main>
     <script src="dist/script.js"></script>
   </body>
 </html>
