--- a/flex-box.html
+++ b/flex-box.html
@@ -16,9 +16,8 @@
   </head>
   <body>
     <header class="container">
-      <div class="heading">
-        <h1>My training file.</h1>
-        <h1>Cheat sheet</h1>
+      <div class="section section-mint">
+        <h1>My training file. Cheat sheet</h1>
         <h1>Flex-box</h1>
       </div>
     </header>
