--- a/index.html
+++ b/index.html
@@ -16,21 +16,18 @@
   </head>
   <body>
     <header class="container">
-      <div class="heading">
-        <h1>My training file.</h1>
-        <h1>Cheat sheet</h1>
+      <div class="section section-mint">
+        <h1>My training file. Cheat sheet</h1>
       </div>
     </header>
     <main class="container">
       <section class="section section-yellow">
         <a href="/flex-box.html" class="topic-link"></a>
         <h2>Flex-box</h2>
-        <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui,
-          incidunt. Eligendi cupiditate, itaque nam perferendis quibusdam, quod
-          unde corporis commodi numquam obcaecati atque iure fuga molestiae
-          tenetur, ex sint delectus?
-        </p>
+        <p class="cavet">Темы</p>
+        <p>Display: flex;</p>
+        <p>Display: inline-flex;</p>
+        <p>Flex-wrap</p>
       </section>
       <section class="section section-pink">
         <a href="#" class="topic-link"></a>
@@ -66,10 +63,9 @@
         <a href="#" class="topic-link"></a>
         <h2>Topic</h2>
         <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui,
-          incidunt. Eligendi cupiditate, itaque nam perferendis quibusdam, quod
-          unde corporis commodi numquam obcaecati atque iure fuga molestiae
-          tenetur, ex sint delectus?
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam ducimus
+          est magnam distinctio vitae nesciunt porro excepturi cumque quo autem
+          ad perspiciatis laborum, ut earum consectetur eaque rem expedita modi.
         </p>
       </section>
     </main>
