--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <p>Display: flex;</p>
         <p>Display: inline-flex;</p>
         <p>Flex-wrap</p>
+        <p class="cavet">Свойства flex-элементов</p>
       </section>
       <section class="section section-pink">
         <a href="#" class="topic-link"></a>
