JavaScript & Icons font pages

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Training Project</title>
+    <title>Home Page</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Grandstander:wght@100;300;400;500;600&display=swap"
       rel="stylesheet"
@@ -30,9 +30,14 @@
         <p>Flex-wrap</p>
         <p class="cavet">Свойства flex-элементов</p>
       </section>
+      <section class="section section-lavander">
+        <a href="/icons-font.html" class="topic-link"></a>
+        <h2>Icons Font</h2>
+        <p class="cavet">Подключние иконочных шрифтов</p>
+      </section>
       <section class="section section-pink">
-        <a href="#" class="topic-link"></a>
-        <h2>Topic</h2>
+        <a href="/js.html" class="topic-link"></a>
+        <h2>Java script</h2>
         <p>
           Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui,
           incidunt. Eligendi cupiditate, itaque nam perferendis quibusdam, quod
@@ -50,16 +55,7 @@
           tenetur, ex sint delectus?
         </p>
       </section>
-      <section class="section section-lavander">
-        <a href="#" class="topic-link"></a>
-        <h2>Topic</h2>
-        <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui,
-          incidunt. Eligendi cupiditate, itaque nam perferendis quibusdam, quod
-          unde corporis commodi numquam obcaecati atque iure fuga molestiae
-          tenetur, ex sint delectus?
-        </p>
-      </section>
+
       <section class="section section-mint">
         <a href="#" class="topic-link"></a>
         <h2>Topic</h2>
