--- a/flex-box.html
+++ b/flex-box.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Training Project</title>
+    <title>Flex-box</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Grandstander:wght@100;300;400;500;600&display=swap"
       rel="stylesheet"
