--- a/index.html
+++ b/index.html
@@ -4,24 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home Page</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Grandstander:wght@100;300;400;500;600&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="dist/styles.css" />
   </head>
   <body>
     <header class="container">
-      <div class="section section-mint">
+      <div class="section section-mint top-container">
         <h1>My training file. Cheat sheet</h1>
       </div>
     </header>
-    <main class="container">
-      <section class="section section-yellow">
+    <main class="container flex-container">
+      <section class="section section-width section-yellow">
         <a href="/flex-box.html" class="topic-link"></a>
         <h2>Flex-box</h2>
         <p class="cavet">Темы</p>
@@ -30,40 +27,32 @@
         <p>Flex-wrap</p>
         <p class="cavet">Свойства flex-элементов</p>
       </section>
-      <section class="section section-lavander">
+      <section class="section section-width section-lavander">
         <a href="/icons-font.html" class="topic-link"></a>
         <h2>Icons Font</h2>
         <p class="cavet">Подключние иконочных шрифтов</p>
       </section>
-      <section class="section section-pink">
+      <section class="section section-width section-pink">
         <a href="/js.html" class="topic-link"></a>
         <h2>Java script</h2>
-        <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui,
-          incidunt. Eligendi cupiditate, itaque nam perferendis quibusdam, quod
-          unde corporis commodi numquam obcaecati atque iure fuga molestiae
-          tenetur, ex sint delectus?
-        </p>
+        <p></p>
       </section>
-      <section class="section section-blue">
-        <a href="#" class="topic-link"></a>
-        <h2>Topic</h2>
-        <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui,
-          incidunt. Eligendi cupiditate, itaque nam perferendis quibusdam, quod
-          unde corporis commodi numquam obcaecati atque iure fuga molestiae
-          tenetur, ex sint delectus?
-        </p>
+      <section class="section section-width section-blue">
+        <a href="/link-attributes.html" class="topic-link"></a>
+        <h2>Атрибуты ссылок</h2>
+        <p></p>
       </section>
 
-      <section class="section section-mint">
+      <section class="section section-width section-mint">
         <a href="#" class="topic-link"></a>
         <h2>Topic</h2>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam ducimus
-          est magnam distinctio vitae nesciunt porro excepturi cumque quo autem
-          ad perspiciatis laborum, ut earum consectetur eaque rem expedita modi.
-        </p>
+        <p></p>
+      </section>
+
+      <section class="section section-width section-yellow">
+        <a href="/flex-box.html" class="topic-link"></a>
+        <h2>Topic</h2>
+        <p></p>
       </section>
     </main>
     <script src="dist/script.js"></script>
