add page with waves button

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
       </section>
 
       <section class="section section-width section-mint">
-        <a href="#" class="topic-link"></a>
-        <h2>Topic</h2>
-        <p></p>
+        <a href="/animation-button.html" class="topic-link"></a>
+        <h2>Animation Button</h2>
+        <p>Beautiful button with animation. Css3 efects</p>
       </section>
 
       <section class="section section-width section-yellow">
