add new file keyboard

--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home Page</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="dist/styles.css" />
   </head>
   <body>
@@ -50,7 +48,25 @@
       </section>
 
       <section class="section section-width section-yellow">
-        <a href="/flex-box.html" class="topic-link"></a>
+        <a href="/grid.html" class="topic-link"></a>
+        <h2>Grids</h2>
+        <p></p>
+      </section>
+
+      <section class="section section-width section-lavander">
+        <a href="/apple-keyboard.html" class="topic-link"></a>
+        <h2>Apple keyboard</h2>
+        <p></p>
+      </section>
+
+      <section class="section section-width section-pink">
+        <a href="#" class="topic-link"></a>
+        <h2>Topic</h2>
+        <p></p>
+      </section>
+
+      <section class="section section-width section-blue">
+        <a href="#" class="topic-link"></a>
         <h2>Topic</h2>
         <p></p>
       </section>
